Resolve issue with title wrapping on lander on mobile devices.

--- a/assets/default.css
+++ b/assets/default.css
@@ -47,7 +47,7 @@ body {
 
 @media (max-width: 414px) {
   #landing h1 {
-    font-size: 64px
+    font-size: 58px
   }
 
   #landing h3 {
